# blockrock

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: deploy.yml  telegram-notify.yml
blockrock-core/: Cargo.toml
blockrock-core/.cargo/: config.toml
blockrock-core/src/: block.rs  blockchain.rs  main.rs  transaction.rs  tron.rs
blockrock-core/static/: index.html
blockrock-web/: index.html  style.css  styles.css
nexus/: .gitignore  README.md  deploy.sh  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
nexus/src/: App.vue  main.js
nexus/src/assets/css/: main.css
nexus/src/components/: AvatarCard.vue  EventsLog.vue  MeteoWidget.vue  MqttControl.vue  NasWidget.vue  NewsWidget.vue  WalletWidget.vue
nexus/src/composables/: useMqtt.js  useTron.js
nexus/src/layouts/: Dashboard.vue
nexus/src/router/: index.js
nexus/src/store/: index.js
nexus/src/views/: Home.vue  Settings.vue
zion-core/: .gitignore  Caddyfile  Cargo.toml  Cargo.toml.save  Dockerfile  README.md  build.rs  docker-compose.yml  notes.txt
zion-core/benches/: benchmarks.rs
zion-core/proto/: build.rs  transaction.proto  zion.proto
zion-core/src/: config.rs  grpc.rs  lib.rs  main.rs  monitoring.rs  p2p.rs  tron.rs
zion-core/src/api/: grpc.rs  mod.rs  prometheus.rs  rest.rs
zion-core/src/lib/: config.rs  prometheus.rs
zion-core/src/lib/api/: grpc.rs  rest.rs
zion-core/src/lib/network/: p2p.rs
zion-core/src/network/: mod.rs  p2p.rs
zion-core/static/: index.html
zion-core/tests/integration/: multi_node.rs
