[package]
name = "blockrock-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }  # Aggiunta feature "serde"
rand = "0.8.5"
sha2 = "0.10"
hex = "0.4"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
