[package]
name = "blockrock-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
rand = "0.8"
libp2p = { version = "0.53", features = ["gossipsub", "tcp", "noise", "yamux", "tokio"] }
libp2p-gossipsub = "0.46"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
