[package]
name = "blockrock-core-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "blockrock_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10"
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "pkcs8", "serde"] }
rand = "0.8"
hex = "0.4"
