[package]
name = "zion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.2", features = ["gossipsub", "tcp", "noise", "yamux", "mdns", "tokio", "macros"] }
libp2p-swarm-derive = "0.34.2"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
futures = "0.3"
