[package]
name = "zion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blockrock-core = { path = "../blockrock-core" }
rocket = { version = "0.5.0", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
rand = "0.8"
