[package]
name = "zion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
blockrock-core-lib = { path = "../blockrock-core" }
tracing-subscriber = "0.3"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pkcs8", "serde"] }
rand = "0.8"
libp2p = { version = "0.53.0", features = ["tcp", "tokio", "mdns", "noise", "yamux", "request-response"] }
prometheus = "0.13"
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
anyhow = "1.0"
dotenvy = "0.15"
rocksdb = "0.22"
base64ct = "1.7.0"
libp2p-swarm-derive = "0.34.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures"] }
futures = "0.3"
web-time = "0.2"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "zion-core"
path = "src/main.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bench]]
name = "benchmarks"
harness = false
